# trayrunner

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SHA256SUMS  install.sh  pyproject.toml  requirements.txt  test_installation.sh  trayrunner-gui  trayrunner-gui.spec  trayrunner.sh  trayrunner.spec
.github/workflows/: build.yml
AppDir/: .DirIcon  AppRun  trayrunner.desktop
AppDir/usr/share/applications/: trayrunner-gui.desktop  trayrunner.desktop
AppDir/usr/share/trayrunner/config/: commands.yaml
autostart/: trayrunner.desktop
gui/: README.md
gui/trayrunner_gui/: __init__.py  app.py  editor_panel.py  main_window.py  tree_panel.py
gui/trayrunner_gui/models/: __init__.py  preferences.py  schema.py  utils.py  validators.py  yaml_io.py
gui/trayrunner_gui/services/: __init__.py  env_check.py  file_watch.py  gui_logger.py  reloader.py  save_coordinator.py
scripts/: build_appimage.sh
src/trayrunner/: app.py
tests/: test_reload_socket.py  test_yaml_roundtrip.py
tools/helpers/: fetch_linuxdeploy.sh
